# agentic-public-administration

./: .env.example  .gitignore  README.md  agent.mermaid  entry-points.json  input.json  langgraph.json  pyproject.toml  uipath.json
.agent/: SDK_REFERENCE.md
.chroma/certificate/: chroma.sqlite3
.chroma/pfa/: chroma.sqlite3
.chroma/rental_income/: chroma.sqlite3
.claude/: settings.local.json
.uipath/: .auth.json  .error_log  .telemetry.json  ro-tax-agents.0.1.0.nupkg  ro-tax-agents.0.1.1.nupkg
__uipath/: state.db
docs/: architecture.md
examples/: demo.py  test_rag.py  verify_uipath_cg.py
src/ro_tax_agents/: __init__.py  graph.py
src/ro_tax_agents/agents/: __init__.py  _base.py  base_agent.py  certificate.py  certificate_agent.py  efactura.py  efactura_agent.py  entry.py  pfa.py  pfa_agent.py  property_sale.py  property_sale_agent.py  rag.py  rental_income.py  rental_income_agent.py
src/ro_tax_agents/config/: __init__.py  prompts.py  settings.py
src/ro_tax_agents/knowledge/: __init__.py  certificate_agent.txt  pfa_agent.txt  rental_income_agent.txt
src/ro_tax_agents/mocks/: __init__.py  external_systems.py  tools.py  uipath_sdk.py
src/ro_tax_agents/models/: __init__.py  documents.py  invoices.py  payments.py  tax_forms.py
src/ro_tax_agents/orchestration/: __init__.py  entry_agent.py  main_graph.py  router.py
src/ro_tax_agents/services/: __init__.py  calculation.py  calculation_agent.py  (+7 more)
tests/: __init__.py  conftest.py
tests/integration/: test_mocks.py
tests/unit/: test_calculation_service.py  test_rag_service.py  test_validators.py
(+5 files in other folders)
