[project]
name = "ro-tax-agents"
version = "0.1.2"
description = "Multi-agent system for Romanian tax services using LangGraph"
authors = [{ name = "Radu Gheorghe", email = "radu.gheorghe@uipath.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "uipath-langchain>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ro_tax_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"
